# axum-ws-server-SmartLampV2

./: .gitignore  Cargo.toml  report.md
config/: config.toml
src/: docs.rs  error.rs  handlers.rs  main.rs  models.rs  utils.rs
src/commands/: mod.rs
src/config/: mod.rs
src/devices/: mod.rs  smart_lamp.rs
src/events/: mod.rs
src/metrics/: mod.rs
static/: app.js  index.html  styles.css
